fix: prevent jumping on input focus in list view

--- a/UserApp/src/apps/utilElements/ListView/style.css
+++ b/UserApp/src/apps/utilElements/ListView/style.css
@@ -28,6 +28,7 @@
 }
 
 .lv-search-bar-container input {
+    margin: 0;
     width: 100%;
     border: 1px solid lightgray;
     border-radius: 15px;
